--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Student</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <button id="generate" onclick="generateStudent()"></button>
-<div id="student">
 <button id="refresh" onClick="window.location.reload()">Reset</button>
+<div id="student">
 </div>
 <script
   src="http://code.jquery.com/jquery-3.2.1.min.js"
