--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Student</title>
+	<title>Student Picker</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
